This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: A reference leak in _operator.c's methodcaller_repr()
Type: Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, josh.r, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-11-23 18:36 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 10689 merged ZackerySpytz, 2018-11-23 18:37
PR 10690 merged miss-islington, 2018-11-23 19:27
PR 10691 merged miss-islington, 2018-11-23 19:27
Messages (5)
msg330355 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-11-23 18:38
The attached PR fixes a reference leak in _operator.c's methodcaller_repr().
msg330356 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-11-23 19:26
New changeset 5b83ef71d3060e1651d3680e805f13a1049c7d6d by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-35303: Fix a reference leak in _operator.c's methodcaller_repr(). (GH-10689)
https://github.com/python/cpython/commit/5b83ef71d3060e1651d3680e805f13a1049c7d6d
msg330360 - (view) Author: miss-islington (miss-islington) Date: 2018-11-23 19:58
New changeset bc665b42ba3a372bc60451583bfaff41d8e1993d by Miss Islington (bot) in branch '3.7':
bpo-35303: Fix a reference leak in _operator.c's methodcaller_repr(). (GH-10689)
https://github.com/python/cpython/commit/bc665b42ba3a372bc60451583bfaff41d8e1993d
msg330362 - (view) Author: miss-islington (miss-islington) Date: 2018-11-23 19:58
New changeset 8c70c08f0fb5795904442e95a2987ea18aed2899 by Miss Islington (bot) in branch '3.6':
bpo-35303: Fix a reference leak in _operator.c's methodcaller_repr(). (GH-10689)
https://github.com/python/cpython/commit/8c70c08f0fb5795904442e95a2987ea18aed2899
msg330475 - (view) Author: Josh Rosenberg (josh.r) * (Python triager) Date: 2018-11-26 23:01
This is completely fixed, right? Just making sure there is nothing left to be done to close the issue.
History
Date User Action Args
2022-04-11 14:59:08adminsetgithub: 79484
2018-11-26 23:06:40serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-11-26 23:01:38josh.rsetnosy: + josh.r
messages: + msg330475
2018-11-23 19:58:27miss-islingtonsetmessages: + msg330362
2018-11-23 19:58:11miss-islingtonsetnosy: + miss-islington
messages: + msg330360
2018-11-23 19:27:13miss-islingtonsetpull_requests: + pull_request9943
2018-11-23 19:27:05miss-islingtonsetpull_requests: + pull_request9942
2018-11-23 19:26:54serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg330356
2018-11-23 18:38:30ZackerySpytzsetmessages: + msg330355
2018-11-23 18:37:23ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request9941
2018-11-23 18:36:38ZackerySpytzcreate