bpo-35303: Fix a reference leak in _operator.c's methodcaller_repr(). (GH-10689) (cherry picked from commit 5b83ef71d3060e1651d3680e805f13a1049c7d6d)

Co-authored-by: Zackery Spytz <zspytz@gmail.com>